<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DialogCustom">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/kavoon"
        android:text="@string/company_name"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/we_ve_updated_our_terms"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/black"
            android:text="@string/message_dialog"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/terms_of_service"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="50dp"
            android:text="@string/accept"
            android:theme="@style/Button.Green" />
    </RelativeLayout>

</RelativeLayout>